# bijux-vex

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PYPI.md  README.md  REUSE.toml  SECURITY.md  deptry.toml  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  pytest.ini  read-only.sqlite  sitemap.xml  tox.ini
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
api/: index.html
api/cli_exit_codes/: index.html
api/errors/: index.html
api/examples/: index.html
api/openapi/: index.html
api/v1/: openapi.v1.json  schema.yaml
architecture/v0.2_narrative/: index.html
benchmarks/: performance_baseline.json
benchmarks/baselines/: v0.2.0.json
changelog/: index.html
config/: bijux.dic  coveragerc.ini  pyrightconfig.json  ruff.toml
contracts/backward_compatibility/: index.html
docs/: changelog.md  index.md
makefiles/: api.mk  citation.mk  docs.mk  fmt.mk  freeze.mk  lint.mk  quality.mk  sbom.mk  security.mk  test.mk
plugins/example_remote_backend/: pyproject.toml
plugins/example_remote_backend/src/bijux_vex_qdrant_plugin/: __init__.py
plugins/template_plugin/: pyproject.toml
plugins/template_plugin/src/bijux_vex_plugin_example/: __init__.py
plugins/template_plugin/tests/: test_plugin_contracts.py
scripts/: artifact_diff.py  bench_baseline.py  bench_regression_gate.py  conformance_report.py  fixture_pin.py  helper_pip_audit.py  openapi_drift.py  perf_baseline.py  plugin_test_kit.py
search/: search_index.json
tests/: conftest.py  strategies.py  test_v1_release_gate.py
(+556 files in other folders)
