[project]
name = "bijux-vex-qdrant-plugin"
version = "0.0.0"
description = "Example remote vector store plugin for Bijux-Vex"
requires-python = ">=3.10"
dependencies = [
  "bijux-vex",
  "qdrant-client>=1.9.0",
]

[project.entry-points."bijux_vex.vectorstores"]
qdrant_plugin_example = "bijux_vex_qdrant_plugin:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
